--- a/Projects/Cat_Website/index.html
+++ b/Projects/Cat_Website/index.html
@@ -4,8 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Cat Website</title>
+    <link rel="stylesheet" href="css/main.css">
+<!--     <style>
+    Inline CSS
+    </style> -->
 </head>
 <body>
-    
+    <div class="wrap">
+    <header>
+        <div class="header-left">
+            <a href="index.html">
+                <img src="logo.svg" alt="Friskay Logo">
+            </a>
+            <div class="divider hide-mobile"></div>
+            <a href="#" class="home hide-mobile">Home</a>
+        </div>
+        <nav>
+            <a href="#" class="menu-open hide-desktop">
+                <img src="menu.svg" alt="Open Menu">
+            </a>
+            <ul>
+                <li>
+                    <a href="#" class="menu-close">
+                        <img src="close.svg" alt="Close menu">
+                    </a>
+                    <li><a href="#">Our Food</a></li>
+                    <li><a href="#">Ingredients</a></li>
+                    <li><a href="#">Studies</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Your cat will go <img src="bonkers.svg" alt="Bonkers Text"></h1>
+        <p class="subhead">..for the world's best testing cat food, sourced with only the finest ingredients. Made with love love from the heart of Missisippi</p>
+        <a href="#" class="primary-cta">Get Bonkers</a>
+    </main>
+
+    <div class="cat-container">
+        <div class="cat">
+             <img src="cat.png" alt="Cat Illustration">
+             <div class="inner-circle"></div>
+             <div class="outer-circle"></div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
