--- a/Projects/Cat_Website/index.html
+++ b/Projects/Cat_Website/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Cat Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-<!--     <style>
+    <!--     <style>
     Inline CSS
     </style> -->
 </head>
 <body>
     <div class="wrap">
     <header>
-        <div class="header-left">
+        <div class="header-left" id="">
             <a href="index.html">
                 <img src="logo.svg" alt="Friskay Logo">
             </a>
