--- a/Projects/Cat_Website/index.html
+++ b/Projects/Cat_Website/index.html
@@ -31,11 +31,11 @@
                     <a href="#" class="menu-close">
                         <img src="close.svg" alt="Close menu">
                     </a>
+                </li>
                     <li><a href="#">Our Food</a></li>
                     <li><a href="#">Ingredients</a></li>
                     <li><a href="#">Studies</a></li>
                     <li><a href="#">FAQ</a></li>
-                </li>
             </ul>
         </nav>
     </header>
@@ -54,5 +54,19 @@
         </div>
     </div>
 </div>
+<script>
+    const menu = document.querySelector('nav ul');
+    const menuBtn = document.querySelector('.menu-open');
+    const closeBtn = document.querySelector('.menu-close');
+
+    menuBtn.addEventListener('click', () => {
+        menu.classList.add('open')
+    })
+
+    closeBtn.addEventListener('click', () => {
+        menu.classList.remove('open')
+    })
+
+</script>
 </body>
 </html>
