--- a/Projects/Cat_Website/index.html
+++ b/Projects/Cat_Website/index.html
@@ -27,7 +27,7 @@
                 <img src="menu.svg" alt="Open Menu">
             </a>
             <ul>
-                <li>
+                <li class="hide-desktop">
                     <a href="#" class="menu-close">
                         <img src="close.svg" alt="Close menu">
                     </a>
