--- a/Projects/Do_01/index.html
+++ b/Projects/Do_01/index.html
@@ -9,5 +9,16 @@
 <body>
     <h1 class="h1">To Do</h1>
     <p class="p1">"Trying is failing Doing is learning"</p>
+    <div class="container">
+        <div class="box">Box 1</div>
+        <div class="box">Box 2</div>
+        <div class="box">Box 3</div>
+        <div class="box">Box 4</div>
+        <div class="box">Box 5</div>
+        <div class="box">Box 6</div>
+        <div class="box">Box 7</div>
+        <div class="box">Box 8</div>
+    </div>
+    
 </body>
 </html>
