--- a/Projects/To_Do_List_01 copy 2/index.html
+++ b/Projects/To_Do_List_01 copy 2/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1 class="h1">To Do</h1>
-    <p class="p1">"Trying is failing Doing is learning"</p>
+    <p class="p1">"Trying is failing Doing is learning. So always Learn "</p>
     <div class="container">
-        <div class="box box1">Box 1</div>
-        <div class="box box2">Box 2</div>
-        <div class="box box3">Box 3</div>
-        <div class="box box4">Box 4</div>
+       <div class="options">
+        <div id="text-input" contenteditable="true"></div>
+       </div>
+
     </div>
 </body>
 </html>
