--- a/Dom_&_Events/index.html
+++ b/Dom_&_Events/index.html
@@ -7,7 +7,12 @@
     <title>Document Object Model</title>
 </head>
 <body>
-    <h1>Full Stack Web Development - DOM</h1>
+    <h1 id="heading">Full Stack Web Development - DOM</h1>
+    <h1 class="heading1">JavaScript</h1>
+    <h2 class="heading1">Learning about DOM Manipulation</h2>
+    <p>Paragraph 1</p>
+    <p>paragraph 2</p>
+    <button id="submit">Submit</button>
     <script src="script.js"></script>
 </body>
 </html>
