--- a/L7_Dom_&_Events_2/index.html
+++ b/L7_Dom_&_Events_2/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="box" name="JSDiv">This is a div
-        <ul style="color: white;">
+   <!--  <div id="box" name="JSDiv">This is a div
+        <ul>
             List 
             <li>item1</li>
             <li>item2</li>
             <li>item3</li>
         </ul>
     </div>
-    <p class="para">This is a paragraph</p>
-    <script src="script.js"></script>
+    <p class="para">This is a paragraph</p> -->
+    <script src="script1.js"></script>
 </body>
 </html>
