--- a/L7_Dom_Part2/index.html
+++ b/L7_Dom_Part2/index.html
@@ -16,6 +16,7 @@
         </ul>
     </div>
     <p class="para">This is a paragraph</p> -->
+    <p class="content">Is a paragraph</p> 
     <script src="script1.js"></script>
 </body>
 </html>
