--- a/L8_Events/index.html
+++ b/L8_Events/index.html
@@ -18,6 +18,7 @@
     </div> -->
     <!-- With the help of JS -->
      <button id="btn1">btn1</button>
+     <div>This is a Div</div>
     <script src="script.js"></script>
 </body>
 </html>
