--- a/L8_Events/index.html
+++ b/L8_Events/index.html
@@ -18,7 +18,8 @@
     </div> -->
     <!-- With the help of JS -->
      <button id="btn1">btn1</button>
-     <div>This is a Div</div>
+     <p><div>This is a Div</div></p>
+     <p><button id="btn">Theme Button</button></p>
     <script src="script.js"></script>
 </body>
 </html>
