--- a/Stone_Paper_Scissors_Game/index.html
+++ b/Stone_Paper_Scissors_Game/index.html
@@ -26,7 +26,7 @@
             <p>You</p>
         </div>
         <div class="score">
-            <p id="comp-socre">0</p>
+            <p id="comp-score">0</p>
             <p>Computer</p>
         </div>
     </div>
