--- a/L13_Api_Project/index.html
+++ b/L13_Api_Project/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id=btn>Random Fact</button>
+    <p id="fact"></p>
     <script src="script.js"></script>
 </body>
 </html>
